# blog-proc

./: .gitignore  .gitmodules  Cargo.toml  LICENSE_MIT  LICENSE_ZLIB  README.md
old/: arguments.rs  blog.rs  error.rs  git.rs  main.rs  parser.rs  status.rs  util.rs
src/: arguments.rs  blog.rs  error.rs  generator.rs  main.rs  post.rs  util.rs
src/component/: mod.rs  parser.rs  render.rs  tex.rs  text.rs
src/template/: article.hbs  article.rs  mod.rs  redirect.hbs
std/: redirect.hbs  test.html  testing.html
test/: article.hbs  input.md  output.html  rust-future.html
