[package]
name = "blog-parser"
version = "0.1.0"
description = "Git based blog parser"
authors = ["Tin Svagelj <tin.svagelj@live.com>"]
edition = "2021"

[features]
default = []

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
regex = "1.7"

atoi_simd = "0.4"
lazy_static = "1.4"

clap = { version = "4.0", features = ["derive"] }
console = "0.15"
indicatif = "0.17"

nym = "0.1"
pathdiff = "0.2.1"
fasthash = {version = "0.4.1", package="fasthash-fork" }

# Formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
pulldown-cmark = { version = "0.9", default-features = false, features = ["simd"] }
syntect = "5.0"
handlebars = "5.0.0-beta"

tokio = { version = "1.22", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
once_cell = "1.16"
async-stream = "0.3"
async-lock = "2.6"

html-escape = "0.2"

git2 = "0.15"

log = "0.4"
env_logger = "0.10"

thiserror = "1.0"
cfg-if = "1.0"
anyhow = "1.0"
