[package]
name = "blog-parser"
version = "0.1.0"
description = "Git based blog parser"
authors = ["Tin Svagelj <tin.svagelj@live.com>"]
edition = "2021"

[features]
default = []

latex = []

[dependencies]
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
regex = "1.7"

atoi_simd = "0.15"
lazy_static = "1.4"

clap = { version = "4.4", features = ["derive"] }
console = "0.15"
indicatif = "0.17"

nym = "0.1"
pathdiff = "0.2.1"
fasthash = { version = "0.4.1", package = "fasthash-fork" }

# Formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
pulldown-cmark = { path = "vendored/pulldown-cmark", default-features = false, features = [
    "simd",
] }
syntect = { version = "5.0", features = [
    "parsing",
    "default-syntaxes",
    "default-themes",
    "html",
    "plist-load",
    "yaml-load",
    "regex-onig",
] }

handlebars = "5.0.0-beta"
render = { path = "vendored/render/render" }

git2 = "0.18"

log = "0.4"
env_logger = "0.10"

strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"
bitflags = { version = "2.4", features = ["serde"] }
anyhow = "1.0"

rayon = "1.7.0"
